Pooja - #2366 - Fixing misalignment on my datasenders page

--- a/datawinners/media/css/scss/section_all_datasenders.scss
+++ b/datawinners/media/css/scss/section_all_datasenders.scss
@@ -14,6 +14,7 @@
 
 .data-sender-table-wrapper {
   overflow-x: scroll;
+  float:left;
   table thead th:first-child input#checkall-datasenders{
      margin-left: 0px !important;
   }
